--- a/style.css
+++ b/style.css
@@ -4,16 +4,26 @@
 }
 body{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    background-color: rgb(24, 24, 24);
+    font-family: sans-serif;
 }
 canvas{
     background-color: rgb(9, 7, 34);
 }
+#title {
+    display: flex;
+    font-family: monospace;
+    padding: 10px;
+}
+#main {
+    display: flex;
+}
 #sidebar {
     background-color: rebeccapurple;
-    min-width: 150px;
+    width: 200px;
 }
 .electron-box {
     padding: 10px
